--- a/package.json
+++ b/package.json
@@ -1,50 +1,24 @@
 {
-  "name": "react-use-scrollspy",
-  "version": "2.0.0",
+  "name": "react-use-scroller",
+  "version": "1.0.0",
   "main": "index.js",
-  "author": "Patrick Puritscher <hello@patrickpuritscher.com>",
+  "author": "Gulian <npm@gulian.fr>",
+  "description": "Fork from https://github.com/Purii/react-use-scrollspy",
   "repository": {
     "type": "git",
-    "url": "git@github.com:Purii/react-use-scrollspy.git"
+    "url": "git@github.com:gulian/react-use-scrollspy.git"
   },
   "bugs": {
-    "url": "https://github.com/Purii/react-use-scrollspy/issues"
+    "url": "https://github.com/gulian/react-use-scrollspy/issues"
   },
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.11"
   },
   "peerDependencies": {
-    "react": "^16.7.0-alpha.2"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.0.1",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.3",
-    "prettier": "^1.16.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
-    ]
+    "react": "^16.8.0"
   },
   "files": [
     "index.js"
-  ],
-  "scripts": {
-    "lint": "eslint index.js",
-    "prettier": "prettier --write '*.{js,json,css,md}'",
-    "test": "npm run lint"
-  }
+  ]
 }
